<?xml version="1.0" encoding="utf-8"?>
<androidx.swiperefreshlayout.widget.SwipeRefreshLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mediaScrollView"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragments.MediaViewer"
    android:background="@color/grey_angular_variant">

    <ListView
        android:id="@+id/imageList"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="start"
        android:clickable="false"
        android:footerDividersEnabled="false"
        android:headerDividersEnabled="false"
        android:divider="@color/grey_angular"
        android:listSelector="@android:color/transparent"
        android:padding="20dp"/>

</androidx.swiperefreshlayout.widget.SwipeRefreshLayout>